--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "lint": "eslint --ext .ts .",
-    "build": "ncc build src/index.ts --minify -o dist"
+    "build": "ncc build src/index.ts -o dist"
   },
   "repository": {
     "type": "git",
