--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "lint": "eslint --ext .ts .",
+    "type-check": "tsc --noEmit",
     "preversion": "npm run build && git add dist && git commit --allow-empty -m \"chore: build v$npm_package_version\"",
     "build": "ncc build src/index.ts -o dist"
   },
@@ -20,21 +21,21 @@
   },
   "homepage": "https://github.com/maxnowack/action-release-generator#readme",
   "dependencies": {
-    "@actions/core": "^1.4.0",
-    "@actions/github": "^5.0.0",
-    "date-fns": "^2.22.1",
-    "lodash": "^4.17.21"
+    "@actions/core": "1.10.0",
+    "@actions/github": "5.1.1",
+    "date-fns": "2.29.3",
+    "lodash": "4.17.21"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.182",
-    "@typescript-eslint/eslint-plugin": "^4.28.2",
-    "@typescript-eslint/parser": "^4.28.2",
-    "@vercel/ncc": "^0.28.6",
-    "eslint": "^7.30.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-import-resolver-typescript": "^2.4.0",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-prefer-object-spread": "^1.2.1",
-    "typescript": "^4.3.5"
+    "@types/lodash": "4.14.189",
+    "@typescript-eslint/eslint-plugin": "5.43.0",
+    "@typescript-eslint/parser": "5.43.0",
+    "@vercel/ncc": "0.34.0",
+    "eslint": "8.27.0",
+    "eslint-config-airbnb-base": "15.0.0",
+    "eslint-import-resolver-typescript": "3.5.2",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-prefer-object-spread": "1.2.1",
+    "typescript": "4.8.4"
   }
 }
